--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -136,6 +136,7 @@ arb:
       index: 'انواع الاحداث'
       new: 'اضافة نوع الحدث'
     events:
+      # change_minutes: 'Change minutes for event'
       edit: 'تعديل الحدث'
       index: 'الاحداث'
       new: 'اضافة حدث'
@@ -176,6 +177,7 @@ arb:
       edit: 'تعديل الجرد'
       index: 'الجرد'
       new: 'الجرد'
+      # show: 'Inventory: %{number}'
     inventory_lines: #!
     journal_entries:
       edit: 'تعديل السجل رقم %{number} من %{created_on}'
@@ -302,6 +304,7 @@ arb:
       # new: 'Add a new production chain'
       # show: 'Production chain: %{name}'
     products:
+      # change_quantities: 'Change quantities for product'
       edit: 'تعديل المنتج : %{name}'
       index: 'المنتجات'
       new: 'اضافة منتج جديد'
@@ -365,10 +368,12 @@ arb:
       # renew: 'Renew session'
     settings:
       about: 'وحول ايكيليبغ'
+      # backup: 'Backup data'
       backups: 'النسخ الاحتياطية'
       configure: 'التكوين' #!
       # edit: 'Configuration'
       import: 'الاستيراد'
+      # restore: 'Restore data'
     stock_moves:
       edit: 'تعديل حركة سهم : %{name}'
       new: 'التسجيل لحركة السهم'
@@ -386,6 +391,7 @@ arb:
       new: 'اضافة نوع الاشتراك'
       # show: 'Subscription type: %{name}'
     subscriptions:
+      # coordinates: 'Refresh coordinates and period'
       edit: 'تعديل الاشتراك:  %{number} من %{start} الى %{finish}'
       # index: 'Subscriptions'
       new: 'انشاء اشتراك جديد'
@@ -731,6 +737,7 @@ arb:
     deposit_update: 'تعديل اقتطاعات البنك'
     depositable: 'تكملة المعلومات'
     description: 'الوصف'
+    # destroy: 'Destroy'
     details: 'معلومات اضافية'
     discount: 'الخصم (%)'
     display: 'عرض'
@@ -977,6 +984,7 @@ arb:
     missing_help: 'صفحات مفقودة'
     # mistake_on_quantities_sum: 'The sum of the quantities are not equals to the total produced quantity'
     # mobile: 'Mobile'
+    # mode: 'Mode'
     # modes: 'Modes'
     modules: 'وحدات'
     moment: '' #!
@@ -1484,8 +1492,9 @@ arb:
     bad_file: 'لا يبدو ان الملفات متطابقة'
     bookkeeping_is_finished: 'نهاية نطاق المحاسبة'
     bookkeeping_works_only_with: 'يمكن جعل نطاق الماسبة الحالية ل : %{list}.'
-    # can_not_mark_entry_lines: 'Can not mark these entry lines'
     cannot_delete_entity: 'غير ممكن حذف هذا الملف لاحتوائه على محاسبة هامة'
+    # cannot_find_document_template: 'Cant find document template'
+    # cannot_mark_entry_lines: 'Can not mark these entry lines'
     cannot_merge_an_entity_with_itself: 'غير ممكن دمج الملف مع نفسه'
     cannot_merge_entities: 'Une erreur est survenue. غير ممكن دمج هذه الملفات'
     changes_have_been_reflected: 'كانت تنعكس التغييرات بشكل صحيح على الوضع الحالي للاسهم'
