Finishes to adapt global javascripts and views to jQuery

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -595,7 +595,7 @@ fra:
     all_conditions: 'toutes les conditions'
     all_periods: 'Tous les exercices'
     already_credited_quantity: 'Qté. déjà passée en avoir'
-    amount: 'Montant HT'
+    amount: 'Montant'
     amount_to_add: 'Sommes à ajouter, exprimées en euros, y compris acompte congés'
     amount_to_reduce: 'Sommes à imputer, exprimées en euros, y compris acompte congés'
     amount_with_taxes: 'Montant TTC' #!
@@ -1078,7 +1078,7 @@ fra:
     play: 'Éxécuter'
     please_wait: 'Merci de patienter...'
     preferences: 'Préférences'
-    # pretax_amount: 'Pre-tax amount'
+    pretax_amount: 'Montant HT'
     previous: 'Précédent'
     previous_bank_statement: 'Solde du relevé précédent N°%{number}'
     price: 'Prix'
@@ -1229,7 +1229,7 @@ fra:
     state: 'État'
     stock_max: 'Stock maximum'
     stock_min: 'Stock minimum'
-    stocks: 'État des stocks'
+    stocks: 'Stocks'
     stocks_preferences: 'Gestion des stocks'
     stop: 'Jusqu''au'
     string_case: 'Options pour le texte'
