--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -103,6 +103,7 @@ spa:
     documents:  #!
       print: 'Impresion, exportacion' #!
     entities:
+      # destroy: 'Remove person'
       # edit: 'Edit person: %{full_name}'
       # export: 'Export people'
       # import: 'Import people'
