--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1221,7 +1221,7 @@ eng:
       one: 'One entry has been validated'
       other: '%{count} entries have been validated'
       zero: 'No entries has been validated'
-    entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its name.'
+    entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its family name.'
     exception_raised: 'An error occurred during the processing: %{message}'
     expired_session: 'Session expired. Please reconnect.'
     fails_to_extract_listing: 'The listing can''t be made: %{message}'
