--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -72,7 +72,7 @@ jpn:
     deposits:
       # edit: 'Edit the deposit %{number}'
       # index: 'Deposits'
-      # new: 'Add a new deposit: %{mode}'
+      # new: 'Add a new deposit'
       # show: 'Deposit %{number} on %{created_on}'
       # unvalidateds: 'Unvalidated deposits'
     districts:
@@ -148,12 +148,12 @@ jpn:
       # index: 'Incoming payment modes'
       # new: 'Add a new incoming payment mode'
     incoming_payment_uses:
-      # new: 'Add a new incoming payment: %{label}'
+      # new: 'Attach an incoming payment'
     incoming_payments:
       # edit: 'Edit the incoming payment %{number}'
       # index: 'Incoming payments'
       # new: 'Add a new incoming payment'
-      # show: 'Incoming payment %{number} de %{entity}'
+      # show: 'Incoming payment %{number} of %{entity}'
     interfacers: #!
     inventories:
       # edit: 'Edit the inventory'
@@ -555,6 +555,8 @@ jpn:
     # are_you_sure_you_want_to_invoice: 'Are you sure you want to invoice?'
     # are_you_sure_you_want_to_send_mails: 'Are you sure you want to send emails?'
     # area_x: '%{name} (%{postcode})'
+    # attach_an_incoming_payment_to_expense: 'Attach an incoming payment to %{type} %{number}'
+    # attach_an_outgoing_payment_to_expense: 'Attach an outgoing payment to %{type} %{number}'
     # attachment: 'Attachment'
     # attorney: 'Attorney'
     # available_columns: 'Available columns: %{columns}'
@@ -855,9 +857,9 @@ jpn:
     # nb_years: 'Years'
     # new: 'New...'
     new_deposit:
-      # one: 'Make a deposit %{mode}: 1 payment'
-      # other: 'Make a deposit %{mode}: %{count} payments'
-      # zero: 'Make a deposit %{mode}: no payments'
+      # one: 'Make a deposit %{mode}: 1 available payment'
+      # other: 'Make a deposit %{mode}: %{count} available payments'
+      # zero: 'Make a deposit %{mode}: no available payments'
     # new_family: 'New family'
     # new_in_line: 'Add a new incoming product'
     # new_organization: 'New organization'
@@ -1254,7 +1256,7 @@ jpn:
       # one: 'One entry has been validated'
       # other: '%{count} entries have been validated'
       # zero: 'No entries has been validated'
-    # entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its name.'
+    # entity_columns_are_needed: 'You need to specify at least one column for the person and in particular its family name.'
     # exception_raised: 'An error occurred during the processing: %{message}'
     # expired_session: 'Session expired. Please reconnect.'
     # fails_to_extract_listing: 'The listing can''t be made: %{message}'
