--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -763,6 +763,7 @@ jpn:
     # interval: 'Personalized Interval'
     # inventory: 'Inventory'
     # invoiced_amount: 'Sales invoiced amount'
+    # invoices_only: 'Use only invoices'
     # is: 'Is'
     # journal: 'Journal'
     # journal_detail: 'Closing on %{closed_on}'
@@ -1091,7 +1092,6 @@ jpn:
     # to_date: 'To date'
     # to_deliver: 'To deliver'
     # to_deposit: 'To deposit'
-    # toggle_print_mode: 'Activate/deactivate "Printable" mode'
     # tool_update: 'Update tool'
     # tools: 'Used tools'
     # tools_list: 'Tools'
@@ -1141,6 +1141,9 @@ jpn:
     # validate: 'Validate'
     # validate_selected_entries: 'Validate selected entries'
     # view: 'View'
+    view_modes:
+      # printable: 'Printable mode'
+      # resized: 'Resized mode'
     # virtual_quantity: 'Virtual quantity'
     # warehouse: 'Warehouse'
     # warehouse_name: 'Warehouse name'
