--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,10 +1,16 @@
-ekylibre (0.3.0+1.b1) unstable; urgency=low
+ekylibre (0.3.1) stable; urgency=low
 
+  * Changes menu organization
+  * Deletes all old plugins
+  * Moves help panel in side bar
+  * Adds history panel in side bar
+  * Removes all javascript in HTML views
+  * Migrates javascript framework from PrototypeJS to jQuery
   * Changes versions files
   * Adds configuration for formize
   * Migrates to Rails 3.0.10
 
- -- Brice Texier <brice@thalie.nouva.local>  Tue, 09 Aug 2011 19:36:09 +0200
+ -- Brice Texier <brice.texier@ekylibre.org>  Tue, 06 Oct 2011 12:36:09 +0200
 
 ekylibre (0.3.0+1.a2) unstable; urgency=low
 
@@ -23,7 +29,7 @@ ekylibre (0.3.0+1.a2) unstable; urgency=low
   * Fixes bug on companies#register when a user is connected.
   * Change dependencies in debian/control due to new package for rake
 
- -- Brice Texier <brice@ekylibre.org>  Wed, 06 Jul 2011 12:09:02 +0200
+ -- Brice Texier <brice.texier@ekylibre.org>  Wed, 06 Jul 2011 12:09:02 +0200
 
 ekylibre (0.3.0+1.a1) unstable; urgency=low
 
@@ -38,7 +44,7 @@ ekylibre (0.3.0+1.a1) unstable; urgency=low
 
  -- Brice Texier <brice.texier@ekylibre.org>  Mon, 21 Jun 2011 11:09:26 +0200
 
-ekylibre (0.3.0) unstable; urgency=low
+ekylibre (0.3.0) stable; urgency=low
 
   * Cleans rights.
   * Cleans document templates.
@@ -72,7 +78,7 @@ ekylibre (0.2.999+1.a1) unstable; urgency=low
 
  -- Brice Texier <brice.texier@ekylibre.org>  Thu, 26 Aug 2010 08:14:16 +0200
 
-ekylibre (0.2.0) unstable; urgency=low
+ekylibre (0.2.0) stable; urgency=low
 
   * Fixes bug on entities import
   * Fixes bug on sequence reset
@@ -82,7 +88,7 @@ ekylibre (0.2.0) unstable; urgency=low
 
  -- Brice Texier <brice.texier@ekylibre.org>  Fri, 18 Apr 2011 08:14:16 +0200
 
-ekylibre (0.1.5) unstable; urgency=low
+ekylibre (0.1.5) stable; urgency=low
 
   * Renames all migration files to have human names.
   * Refactorizes entities import and export
@@ -90,7 +96,7 @@ ekylibre (0.1.5) unstable; urgency=low
 
  -- Brice Texier <brice.texier@ekylibre.org>  Fri, 7 May 2010 08:14:16 +0200
 
-ekylibre (0.1.4) unstable; urgency=low
+ekylibre (0.1.4) stable; urgency=low
 
   * Removes PostgreSQL special word to be compatible with MySQL and SQLite.
   * Fixes bug on search on numerical values with MySQL
@@ -102,7 +108,7 @@ ekylibre (0.1.4) unstable; urgency=low
 
  -- Brice Texier <brice.texier@ekylibre.org>  Fri, 23 Apr 2010 08:14:16 +0200
 
-ekylibre (0.1.3) unstable; urgency=low
+ekylibre (0.1.3) stable; urgency=low
 
   * Fixes bug on listing conditions.
   * Unifies errors and notifications presentation.
