--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -190,6 +190,7 @@ fra:
       draft: 'Brouillard'
       edit: 'Modifier le journal : %{name}'
       general_ledger: 'Grand livre'
+      import: 'Importer des données comptables'
       index: 'Journaux'
       new: 'Créer un nouveau journal'
       reopen: 'Déclôturer le journal : %{name}'
