Adds missing reflection in OutgoingPaymentUse to enable reflection :purchases in OutgoingPayment

--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -191,6 +191,7 @@ spa:
       draft: 'Niebla'
       edit: 'Modicicar el periodico : %{name}'
       general_ledger: 'Grande libro'
+      # import: 'Import accounting data'
       index: 'Periodicos'
       new: 'Crear un nuevo periodico'
       reopen: 'Déclôture du %{name}'
