--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -174,6 +174,7 @@ jpn:
       # draft: 'Draft'
       # edit: 'Edit journal: %{name}'
       # general_ledger: 'General ledger'
+      # import: 'Import accounting data'
       # index: 'Journals'
       # new: 'Create new journal'
       # reopen: 'Reopen journal : %{name}'
