--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -512,6 +512,7 @@ eng:
     add_delivery: 'Add delivery'
     add_payment: 'Add payment'
     add_quickly_a_line: 'Add quickly a line of product'
+    add_subscription_for_sale_line: 'Add subscription for sale line #%{position}'
     address: 'Address'
     all: 'All'
     all_accounts: 'All accounts'
