--- a/config/locales/fra/prints/order_preparation.xml
+++ b/config/locales/fra/prints/order_preparation.xml
@@ -31,8 +31,8 @@
       <table collection="transport.deliveries.first.lines" fixed="true">
 	<column label="Quantité" property="quantity" width="20mm"/>
 	<column label="Produit" property="product.name" width="60mm"/>
-	<column label="Montant" property="price.amount_with_taxes" width="40mm/>"/>
-	<column label="Lieu de stockage" property="order_line.warehouse/name" wifth="50mm"/>
+	<column label="Montant" property="price.amount_with_taxes" width="40mm"/>
+	<column label="Lieu de stockage" property="order_line.warehouse/name" width="50mm"/>
       </table>
 
 
