--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -143,6 +143,7 @@ spa:
     finances: #!
     financial_years:
       close: 'Cerrado de ejercicio'
+      # compute_balances: 'Compute financial year balance'
       edit: 'Modificar un nuevo ejercicio'
       index: 'Exercicios contables'
       new: 'Crear un nuevo ejercicio'
@@ -581,6 +582,7 @@ spa:
     # add_delivery: 'Add delivery'
     # add_payment: 'Add payment'
     # add_quickly_a_line: 'Add quickly a line of product'
+    # add_subscription_for_sale_line: 'Add subscription for sale line #%{position}'
     # address: 'Address'
     # all: 'All'
     # all_accounts: 'All accounts'
