--- a/config/locales/fra/prints/deposit.xml
+++ b/config/locales/fra/prints/deposit.xml
@@ -6,7 +6,7 @@
   <parameters>
     <parameter name="deposit" nature="deposit">Encaissement</parameter>
   </parameters>
-  <document unit="mm" size="10" title="client.label">
+  <document unit="mm" size="10" title="Remise en banque {{deposit.number}}">
     <page format="A4" margin="10mm">
       <part height="85mm">
         <set>
@@ -20,36 +20,27 @@
       </part>
 
       <part height="15mm"> 
-        <set left="50%"> 
-          <text value="Remise en banque du {{deposit.created_on?format=classic}}" top="1mm" bold="true" size="12" align="center"/>
-          <text value="À remettre sur le compte {{deposit.cash/iban_label}}" top="6mm" align="center" if="deposit.cash.mode == 'iban'"/>
-          <text value="À remettre sur le compte {{deposit.cash/bank_code}}-{{deposit.cash/agency_code}}-{{deposit.cash/number}}-{{deposit.cash/key}}" top="6mm" align="center" if="deposit.cash.mode == 'bban'"/>
+        <set> 
+          <text value="Remise en banque du {{deposit.created_on?format=month_letter}}" top="1mm" bold="true" size="12" align="center" left="50%"/>
+          <text value="À remettre sur le compte {{deposit.cash/iban_label}}" top="6mm" align="center" left="50%" if="deposit.cash.mode == 'iban'"/>
+          <text value="À remettre sur le compte {{deposit.cash/bank_code}}-{{deposit.cash/agency_code}}-{{deposit.cash/number}}-{{deposit.cash/key}}" top="6mm" align="center" left="50%" if="deposit.cash.mode == 'bban'"/>
         </set>
       </part>
 
       <table collection="deposit.payments" fixed="true">
         <column label="Client" property="payer.full_name" width="75mm"/>
         <column label="Banque" property="bank" width="35mm"/>
-        <column label="N. Compte" property="account_number" width="25mm" align="center"/>
-        <column label="N. Ch." property="check_number" width="15mm" align="center"/>
+        <column label="N°Compte" property="account_number" width="25mm" align="center"/>
+        <column label="N°Ch." property="check_number" width="15mm" align="center"/>
         <column label="Date" property="paid_on" width="20mm" align="center"/>
         <column label="Montant" property="amount" width="20mm" align="right" numeric="money"/>
       </table>
   
       <part height="10mm">
-        <set left="50%" top="3mm">
-          <text value="{{deposit/payments_count}} règlements pour un montant total de {{deposit/amount?numeric}}€" size="12" bold="true" align="center"/>
+        <set top="3mm">
+          <text value="{{deposit/payments_count}} règlements pour un montant total de {{deposit/amount?numeric}}€" size="12" bold="true" align="center" left="50%"/>
         </set>
       </part>
-
-<!--
-      <part height="35mm">
-        <set left="100mm" top="3mm">
-          <rectangle width="80mm" height="30mm"/>
-          <text value="Cachet et/ou signature" top="2mm" left="2mm"/>
-        </set>
-      </part>
--->
 
       <part height="15mm" bottom="true">
         <set>
